force-app/main/default/objects/MBMS_Movie_Actor__c/MBMS_Movie_Actor__c.object-meta.xml
<CustomObject>
    <description>Junction object between Movie and Artist.</description>
    <label>Movie Actor</label>
    <nameField>
        <label>Movie Actor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>