force-app/main/default/objects/MBMS_Movie_Actor__c/fields/MBMS_Artist__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Artist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A field that stores a lookup to the Artist object.</description>
    <inlineHelpText>Artist.</inlineHelpText>
    <label>Artist</label>
    <referenceTo>MBMS_Artist__c</referenceTo>
    <relationshipLabel>Movie Actors</relationshipLabel>
    <relationshipName>Movie_Actors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>