force-app/main/default/objects/MBMS_Movie_Actor__c/fields/MBMS_Character_Name__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Character_Name__c</fullName>
    <description>A field that stores the name of the character played by the actor.</description>
    <inlineHelpText>Character name.</inlineHelpText>
    <label>Character Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>