force-app/main/default/objects/MBMS_Movie_Actor__c/fields/MBMS_Movie__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Movie__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A field that stores a lookup to the Movie object.</description>
    <inlineHelpText>Movie.</inlineHelpText>
    <label>Movie</label>
    <referenceTo>MBMS_Movie__c</referenceTo>
    <relationshipLabel>Movie Actors</relationshipLabel>
    <relationshipName>Movie_Actors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>