force-app/main/default/objects/MBMS_Movie_Actor__c/listViews/All_With_Details.listView-meta.xml
<ListView>
    <fullName>All_With_Details</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>MBMS_Character_Name__c</columns>
    <columns>MBMS_Movie__c</columns>
    <columns>MBMS_Artist__c</columns>
    <filterScope>Mine</filterScope>
    <label>All With Details</label>
</ListView>